--- a/topmundial.html
+++ b/topmundial.html
@@ -18,6 +18,7 @@
         <p>2018: Mención especial a Piolets d'Or por su destacada contribución a la escalada durante 2017.</p>
         <p>2018: Persona viva más convincente de un documental, por Critics' Choice Documentary Awards.</p>
     </div>
+     <div class="img"> <img src="vertical.jpg" alt="vertical"> </div>
     <footer class="atras"><button><a href="index.html">Atrás</a></button></footer>
 </body>
 
