--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Honnold</title>
     <link rel="stylesheet" href="css/style.css">
-     
+
 </head>
 
 <body>
-    <header>Alex Honnold</header><link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap" rel="stylesheet">
-    <div>
-        <h1 id="Biografia">
-        <h1 id="Carrera"></h1>
-        <h1 id="Top mundial"></h1>
-    </div>
+    <header>Alex Honnold</header>
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap" rel="stylesheet">
+
     <div class="grid-container">
         <div class="item1"><a href="biografia.html">BIOGRAFIA</a></div>
         <div class="item2"><a href="carrera.html">CARRERA</a></div>
